# restonks

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
restonks/: cli.py  gui.py  lib.py
restonks/ui/: main.ui
src/: main.py
