[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "restonks"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "tradernet-sdk"
]
authors = [
  {name = "Constantinos Menelaou", email = "konmenel@gmail.com"},
]
readme = "README.md"
description  = "The tool for rebalancing your Freedom24 portfolio."
license-files = ["LICEN[CS]E*"]

[project.scripts]
restonks = "cli:main"

# [project.gui-scripts]
# restonks-guii = "gui:main"
